chore: 🤖 update package.json scripts for testing and linting

--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "nx": "nx",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
-    "lint": "nx workspace-lint && ng lint",
+    "test": "nx run-many --all --target=test",
+    "test:ci": "nx run-many --all --target=test --skip-nx-cache",
+    "lint": "nx workspace-lint && nx run-many --target=lint --all=true",
     "e2e": "ng e2e",
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
