--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@nrwl/nx-cloud": "latest",
     "@nrwl/tao": "11.4.0",
     "@nrwl/workspace": "11.4.0",
+    "@nxrocks/nx-spring-boot": "^1.3.1",
     "@types/jest": "26.0.8",
     "@types/node": "12.12.38",
     "@typescript-eslint/eslint-plugin": "4.3.0",
