chore: 🤖 create react app

--- a/nx.json
+++ b/nx.json
@@ -28,6 +28,13 @@
   "projects": {
     "java-api": {
       "tags": []
+    },
+    "react-app": {
+      "tags": []
+    },
+    "react-app-e2e": {
+      "tags": [],
+      "implicitDependencies": ["react-app"]
     }
   }
 }
