--- a/package.json
+++ b/package.json
@@ -39,6 +39,11 @@
     "@angular/platform-browser-dynamic": "^11.2.0",
     "@angular/router": "^11.2.0",
     "@nrwl/angular": "11.4.0",
+    "core-js": "^3.6.5",
+    "document-register-element": "1.13.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-router-dom": "5.2.0",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "^0.10.2"
@@ -51,24 +56,39 @@
     "@angular/cli": "~11.0.0",
     "@angular/compiler-cli": "^11.2.0",
     "@angular/language-service": "^11.2.0",
+    "@babel/core": "7.9.6",
+    "@babel/preset-env": "7.9.6",
+    "@babel/preset-react": "7.9.4",
+    "@babel/preset-typescript": "7.9.0",
     "@nrwl/cli": "11.4.0",
     "@nrwl/cypress": "11.4.0",
     "@nrwl/eslint-plugin-nx": "11.4.0",
     "@nrwl/jest": "11.4.0",
     "@nrwl/linter": "11.4.0",
     "@nrwl/nx-cloud": "latest",
+    "@nrwl/react": "11.4.0",
     "@nrwl/tao": "11.4.0",
+    "@nrwl/web": "11.4.0",
     "@nrwl/workspace": "11.4.0",
     "@nxrocks/nx-spring-boot": "^1.3.1",
+    "@testing-library/react": "11.1.2",
     "@types/jest": "26.0.8",
     "@types/node": "12.12.38",
+    "@types/react": "16.9.56",
+    "@types/react-dom": "16.9.9",
+    "@types/react-router-dom": "5.1.6",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
+    "babel-jest": "26.2.2",
     "cypress": "^6.0.1",
     "dotenv": "6.2.0",
     "eslint": "7.10.0",
     "eslint-config-prettier": "6.0.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.21.5",
+    "eslint-plugin-react-hooks": "4.2.0",
     "jest": "26.2.2",
     "jest-preset-angular": "8.3.2",
     "prettier": "2.2.1",
